--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,9 +51,12 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:2.1.0'
     /* splash screen */
     implementation 'gr.pantrif:easy-android-splash-screen:0.0.1'
-    /* cardView */
-    implementation 'com.android.support:cardview-v7:28.0.0'
     implementation files('libs/mail.jar')
+    /* functions */
+    implementation 'com.google.firebase:firebase-functions:16.1.0'
+
+    implementation 'com.android.volley:volley:1.1.1'
+
 
 }
 
