--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.aracelylj.amusemeapp">
 
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -20,13 +21,15 @@
 
     <protected-broadcast android:name="android.intent.action.MEDIA_MOUNTED" />
 
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
         <activity android:name=".Administrador.Usuarios"></activity>
         <activity android:name=".Administrador.NotificacionesAdmin" />
         <activity android:name=".Administrador.SucursalesAdmin" />
@@ -68,6 +71,12 @@
             android:name=".RegistrarDeposito"
             android:label="RegistrarDeposito"
             android:screenOrientation="portrait" />
+
+        <service android:name=".Fcm" android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
